# promptomoto

./: LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
.github/workflows/: backend.yml  docker-backend.yml  docker-frontend.yml  frontend.yml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  populate_db.py  pyproject.toml
backend/app/: config.py  main.py  security.py
backend/app/models/: ai_models.py  common.py  prompts.py  users.py
backend/app/routers/: admin.py  ai_models.py  auth.py  prompts.py  users.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  eslint.config.mjs  next.config.ts  package.json
frontend/app/: page.tsx
frontend/src/: middleware.ts  proxy.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/collection/: layout.tsx  page.tsx
frontend/src/app/discover/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/prompt/: layout.tsx  loading.tsx
frontend/src/app/prompt/[id]/: loading.tsx  page.tsx
frontend/src/app/prompt/[id]/edit/: page.tsx
frontend/src/app/prompt/new/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: copy-button.tsx  navigation-menu.tsx  paginator.tsx  providers.tsx
frontend/src/components/discover/: search-header.tsx  search-result.tsx  search-results.tsx
frontend/src/components/navigation/: navigation-menu.tsx  theme-switcher.tsx
frontend/src/components/prompt/: edit-prompt-button.tsx  prompt-form.tsx
frontend/src/components/providers/: auth.tsx  providers.tsx
frontend/src/components/ui/: alert-dialog.tsx
frontend/src/lib/: jwt.ts
frontend/src/lib/api/: ai-models.ts  index.ts  prompts.ts  users.ts
frontend/src/lib/models/: ai-models.ts  common.ts  prompts.ts  users.ts
