[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.33",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["ruff>=0.15.0"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
