[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.33",
    "argon2-cffi>=23.1.0",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["ruff>=0.15.0", "ty>=0.0.1"]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "S",   # flake8-bandit (security)
    "T20", # flake8-print
    "RET", # flake8-return
    "PTH", # flake8-use-pathlib
    "TC",  # flake8-type-checking
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
]

[tool.ruff.lint.per-file-ignores]
"populate_db.py" = [
    "S311", # pseudo-random is fine for seeding test data
    "T201", # print is appropriate in a CLI script
]
